clase 5/clase4/Parser/parser.output
Terminales no usados en la gramática

    '*'
    '/'


Gramática

    0 $accept: s END

    1 s: lSentencia

    2 lSentencia: lSentencia sentencia z
    3           | sentencia z

    4 sentencia: declaracion_var
    5          | asignacion_var
    6          | imprimir
    7          | bloque

    8 lista_Expr: lista_Expr ',' expr
    9           | expr

   10 imprimir: IMPR '(' lista_Expr ')'

   11 bloque: '{' lSentencia '}'

   12 z: ';'
   13  | ε

   14 declaracion_var: DIM ID AS tipo
   15                | DIM ID AS tipo '=' expr

   16 asignacion_var: ID '=' expr

   17 expr: expr SUMA expr
   18     | expr MENOS expr
   19     | '(' expr ')'
   20     | MENOS expr
   21     | NUMERO
   22     | ID
   23     | STRING

   24 tipo: INT
   25     | STR
   26     | FLO


Terminales con las reglas donde aparecen

    END (0) 0
    '(' (40) 10 19
    ')' (41) 10 19
    '*' (42)
    ',' (44) 8
    '/' (47)
    ';' (59) 12
    '=' (61) 15 16
    '{' (123) 11
    '}' (125) 11
    error (256)
    NUMERO <std::string> (258) 21
    ID <std::string> (259) 14 15 16 22
    STRING <std::string> (260) 23
    INT <std::string> (261) 24
    STR <std::string> (262) 25
    FLO <std::string> (263) 26
    SUMA (264) 17
    MENOS (265) 18 20
    DIM (266) 14 15
    AS (267) 14 15
    IMPR (268) 10
    NEG (269)


No terminales con las reglas donde aparecen

    $accept (24)
        on left: 0
    s <AbstractExp*> (25)
        on left: 1
        on right: 0
    lSentencia <NT_LSentencias*> (26)
        on left: 2 3
        on right: 1 2 11
    sentencia <AbstractExp*> (27)
        on left: 4 5 6 7
        on right: 2 3
    lista_Expr <NT_ListaExpr*> (28)
        on left: 8 9
        on right: 8 10
    imprimir <NT_Imprimir*> (29)
        on left: 10
        on right: 6
    bloque <AbstractExp*> (30)
        on left: 11
        on right: 7
    z (31)
        on left: 12 13
        on right: 2 3
    declaracion_var <AbstractExp*> (32)
        on left: 14 15
        on right: 4
    asignacion_var <AbstractExp*> (33)
        on left: 16
        on right: 5
    expr <AbstractExp*> (34)
        on left: 17 18 19 20 21 22 23
        on right: 8 9 15 16 17 18 19 20
    tipo <AbstractExp*> (35)
        on left: 24 25 26
        on right: 14 15


Estado 0

    0 $accept: • s END

    ID    desplazar e ir al estado 1
    DIM   desplazar e ir al estado 2
    IMPR  desplazar e ir al estado 3
    '{'   desplazar e ir al estado 4

    s                ir al estado 5
    lSentencia       ir al estado 6
    sentencia        ir al estado 7
    imprimir         ir al estado 8
    bloque           ir al estado 9
    declaracion_var  ir al estado 10
    asignacion_var   ir al estado 11


Estado 1

   16 asignacion_var: ID • '=' expr

    '='  desplazar e ir al estado 12


Estado 2

   14 declaracion_var: DIM • ID AS tipo
   15                | DIM • ID AS tipo '=' expr

    ID  desplazar e ir al estado 13


Estado 3

   10 imprimir: IMPR • '(' lista_Expr ')'

    '('  desplazar e ir al estado 14


Estado 4

   11 bloque: '{' • lSentencia '}'

    ID    desplazar e ir al estado 1
    DIM   desplazar e ir al estado 2
    IMPR  desplazar e ir al estado 3
    '{'   desplazar e ir al estado 4

    lSentencia       ir al estado 15
    sentencia        ir al estado 7
    imprimir         ir al estado 8
    bloque           ir al estado 9
    declaracion_var  ir al estado 10
    asignacion_var   ir al estado 11


Estado 5

    0 $accept: s • END

    END  desplazar e ir al estado 16


Estado 6

    1 s: lSentencia •
    2 lSentencia: lSentencia • sentencia z

    ID    desplazar e ir al estado 1
    DIM   desplazar e ir al estado 2
    IMPR  desplazar e ir al estado 3
    '{'   desplazar e ir al estado 4

    $default  reduce usando la regla 1 (s)

    sentencia        ir al estado 17
    imprimir         ir al estado 8
    bloque           ir al estado 9
    declaracion_var  ir al estado 10
    asignacion_var   ir al estado 11


Estado 7

    3 lSentencia: sentencia • z

    ';'  desplazar e ir al estado 18

    $default  reduce usando la regla 13 (z)

    z  ir al estado 19


Estado 8

    6 sentencia: imprimir •

    $default  reduce usando la regla 6 (sentencia)


Estado 9

    7 sentencia: bloque •

    $default  reduce usando la regla 7 (sentencia)


Estado 10

    4 sentencia: declaracion_var •

    $default  reduce usando la regla 4 (sentencia)


Estado 11

    5 sentencia: asignacion_var •

    $default  reduce usando la regla 5 (sentencia)


Estado 12

   16 asignacion_var: ID '=' • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 25


Estado 13

   14 declaracion_var: DIM ID • AS tipo
   15                | DIM ID • AS tipo '=' expr

    AS  desplazar e ir al estado 26


Estado 14

   10 imprimir: IMPR '(' • lista_Expr ')'

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    lista_Expr  ir al estado 27
    expr        ir al estado 28


Estado 15

    2 lSentencia: lSentencia • sentencia z
   11 bloque: '{' lSentencia • '}'

    ID    desplazar e ir al estado 1
    DIM   desplazar e ir al estado 2
    IMPR  desplazar e ir al estado 3
    '{'   desplazar e ir al estado 4
    '}'   desplazar e ir al estado 29

    sentencia        ir al estado 17
    imprimir         ir al estado 8
    bloque           ir al estado 9
    declaracion_var  ir al estado 10
    asignacion_var   ir al estado 11


Estado 16

    0 $accept: s END •

    $default  aceptar


Estado 17

    2 lSentencia: lSentencia sentencia • z

    ';'  desplazar e ir al estado 18

    $default  reduce usando la regla 13 (z)

    z  ir al estado 30


Estado 18

   12 z: ';' •

    $default  reduce usando la regla 12 (z)


Estado 19

    3 lSentencia: sentencia z •

    $default  reduce usando la regla 3 (lSentencia)


Estado 20

   21 expr: NUMERO •

    $default  reduce usando la regla 21 (expr)


Estado 21

   22 expr: ID •

    $default  reduce usando la regla 22 (expr)


Estado 22

   23 expr: STRING •

    $default  reduce usando la regla 23 (expr)


Estado 23

   20 expr: MENOS • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 31


Estado 24

   19 expr: '(' • expr ')'

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 32


Estado 25

   16 asignacion_var: ID '=' expr •
   17 expr: expr • SUMA expr
   18     | expr • MENOS expr

    SUMA   desplazar e ir al estado 33
    MENOS  desplazar e ir al estado 34

    $default  reduce usando la regla 16 (asignacion_var)


Estado 26

   14 declaracion_var: DIM ID AS • tipo
   15                | DIM ID AS • tipo '=' expr

    INT  desplazar e ir al estado 35
    STR  desplazar e ir al estado 36
    FLO  desplazar e ir al estado 37

    tipo  ir al estado 38


Estado 27

    8 lista_Expr: lista_Expr • ',' expr
   10 imprimir: IMPR '(' lista_Expr • ')'

    ')'  desplazar e ir al estado 39
    ','  desplazar e ir al estado 40


Estado 28

    9 lista_Expr: expr •
   17 expr: expr • SUMA expr
   18     | expr • MENOS expr

    SUMA   desplazar e ir al estado 33
    MENOS  desplazar e ir al estado 34

    $default  reduce usando la regla 9 (lista_Expr)


Estado 29

   11 bloque: '{' lSentencia '}' •

    $default  reduce usando la regla 11 (bloque)


Estado 30

    2 lSentencia: lSentencia sentencia z •

    $default  reduce usando la regla 2 (lSentencia)


Estado 31

   17 expr: expr • SUMA expr
   18     | expr • MENOS expr
   20     | MENOS expr •

    $default  reduce usando la regla 20 (expr)


Estado 32

   17 expr: expr • SUMA expr
   18     | expr • MENOS expr
   19     | '(' expr • ')'

    SUMA   desplazar e ir al estado 33
    MENOS  desplazar e ir al estado 34
    ')'    desplazar e ir al estado 41


Estado 33

   17 expr: expr SUMA • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 42


Estado 34

   18 expr: expr MENOS • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 43


Estado 35

   24 tipo: INT •

    $default  reduce usando la regla 24 (tipo)


Estado 36

   25 tipo: STR •

    $default  reduce usando la regla 25 (tipo)


Estado 37

   26 tipo: FLO •

    $default  reduce usando la regla 26 (tipo)


Estado 38

   14 declaracion_var: DIM ID AS tipo •
   15                | DIM ID AS tipo • '=' expr

    '='  desplazar e ir al estado 44

    $default  reduce usando la regla 14 (declaracion_var)


Estado 39

   10 imprimir: IMPR '(' lista_Expr ')' •

    $default  reduce usando la regla 10 (imprimir)


Estado 40

    8 lista_Expr: lista_Expr ',' • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 45


Estado 41

   19 expr: '(' expr ')' •

    $default  reduce usando la regla 19 (expr)


Estado 42

   17 expr: expr • SUMA expr
   17     | expr SUMA expr •
   18     | expr • MENOS expr

    $default  reduce usando la regla 17 (expr)


Estado 43

   17 expr: expr • SUMA expr
   18     | expr • MENOS expr
   18     | expr MENOS expr •

    $default  reduce usando la regla 18 (expr)


Estado 44

   15 declaracion_var: DIM ID AS tipo '=' • expr

    NUMERO  desplazar e ir al estado 20
    ID      desplazar e ir al estado 21
    STRING  desplazar e ir al estado 22
    MENOS   desplazar e ir al estado 23
    '('     desplazar e ir al estado 24

    expr  ir al estado 46


Estado 45

    8 lista_Expr: lista_Expr ',' expr •
   17 expr: expr • SUMA expr
   18     | expr • MENOS expr

    SUMA   desplazar e ir al estado 33
    MENOS  desplazar e ir al estado 34

    $default  reduce usando la regla 8 (lista_Expr)


Estado 46

   15 declaracion_var: DIM ID AS tipo '=' expr •
   17 expr: expr • SUMA expr
   18     | expr • MENOS expr

    SUMA   desplazar e ir al estado 33
    MENOS  desplazar e ir al estado 34

    $default  reduce usando la regla 15 (declaracion_var)
